Bits32/BluePill/BLUEWORKSPAC/.metadata/.plugins/org.eclipse.cdt.ui/ADCtest2025.build.log
12:17:06 **** Incremental Build of configuration Debug for project ADCtest2025 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/UnerProtocol.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/UnerProtocol.d" -MT"Core/Src/UnerProtocol.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/UnerProtocol.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
In file included from ../Core/Inc/stm32f1xx_hal_conf.h:334,
                 from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:163:69: error: 'speed' undeclared (first use in this function)
  163 |                         __HAL_TIM_SET_COMPARE(&htim4,TIM_CHANNEL_2, speed);
      |                                                                     ^~~~~
../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim.h:1395:72: note: in definition of macro '__HAL_TIM_SET_COMPARE'
 1395 |   (((__CHANNEL__) == TIM_CHANNEL_1) ? ((__HANDLE__)->Instance->CCR1 = (__COMPARE__)) :\
      |                                                                        ^~~~~~~~~~~
../Core/Src/main.c:163:69: note: each undeclared identifier is reported only once for each function it appears in
  163 |                         __HAL_TIM_SET_COMPARE(&htim4,TIM_CHANNEL_2, speed);
      |                                                                     ^~~~~
../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim.h:1395:72: note: in definition of macro '__HAL_TIM_SET_COMPARE'
 1395 |   (((__CHANNEL__) == TIM_CHANNEL_1) ? ((__HANDLE__)->Instance->CCR1 = (__COMPARE__)) :\
      |                                                                        ^~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.

12:17:08 Build Failed. 3 errors, 0 warnings. (took 2s.89ms)

